--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,15 +359,15 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.sheffield.gov.uk">Sheffield City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.gov.uk/alerts">Emergency Alerts</a></li>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.walthamforest.gov.uk/">London Borough of Waltham Forest Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.westsussex.gov.uk/">West Sussex County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.gov.uk/alerts/how-alerts-work">How emergency alerts work</a></li>
+<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.nottinghamshire.gov.uk">Nottinghamshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
+<li><a href="https://www.gov.ukhttp//www.hambleton.gov.uk/">Hambleton District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southbucks.gov.uk">South Bucks District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
