--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
-      <li><a href="https://www.gov.uk/alerts" class="govuk-link">Emergency Alerts</a></li>
-      <li><a href="http://www.haringey.gov.uk/" class="govuk-link">London Borough of Haringey Council</a></li>
       <li><a href="https://www.gov.uk/alerts/how-alerts-work" class="govuk-link">How emergency alerts work</a></li>
-      <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
-      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
-      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
-      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
-      <li><a href="http://www.medway.gov.uk" class="govuk-link">Medway Council</a></li>
-      <li><a href="https://www.gov.uk/alerts/when-you-get-an-alert" class="govuk-link">When you get an emergency alert</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
+      <li><a href="http://ec.europa.eu/citizens-initiative" class="govuk-link">The European Citizens&rsquo; Initiative</a></li>
+      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
+      <li><a href="https://www.organdonation.nhs.uk/" class="govuk-link">Organ donation</a></li>
+      <li><a href="http://www.broadland.gov.uk" class="govuk-link">Broadland District Council</a></li>
+      <li><a href="http://www.manchester.gov.uk" class="govuk-link">Manchester City Council</a></li>
+      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
