--- a/manual/local-frontend-development.html
+++ b/manual/local-frontend-development.html
@@ -203,6 +203,13 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/d4a254f694231a690a2f8189a398c56ee808f060">15 Dec 2020</a>
 </div>
