--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/268479.zh-tw">英國與台灣分享再生能源開發經驗</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-zealand-united-kingdom-joint-statement-on-cyber-security">New Zealand - United Kingdom Joint Statement on Cyber Security </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-chevening-scholarships-in-bolivia-are-open--2">Applications for Chevening Scholarships in Bolivia are open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/structural-survey-of-anguillas-main-jetty-by-major-andy-nixon-mbe">Structural Survey of Anguilla&rsquo;s Main Jetty by Major Andy Nixon MBE</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-foreign-secretary-william-hague-arrives-in-pakistan">UK Foreign Secretary William Hague arrives in Pakistan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/253585.pt">Agenda britânica para atrair empresários brasileiros continua</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
